# pqcrypto

./: CHANGELOG.md  implementations.yaml  release.sh
.github/workflows/: ci.yml
pqcrypto/: Cargo.toml
pqcrypto-classicmceliece/: Cargo.toml  build.rs
pqcrypto-classicmceliece/src/: ffi.rs  mceliece348864.rs  mceliece348864f.rs  mceliece460896.rs  mceliece460896f.rs  mceliece6688128.rs  mceliece6688128f.rs  mceliece6960119.rs  mceliece6960119f.rs  mceliece8192128.rs  mceliece8192128f.rs
pqcrypto-dilithium/: Cargo.toml  build.rs
pqcrypto-dilithium/src/: dilithium2.rs  dilithium3.rs  dilithium5.rs  ffi.rs
pqcrypto-falcon/: Cargo.toml  build.rs
pqcrypto-falcon/src/: falcon1024.rs  falcon512.rs  ffi.rs
pqcrypto-frodo/: Cargo.toml  build.rs
pqcrypto-frodo/src/: ffi.rs  frodokem1344aes.rs  frodokem1344shake.rs  frodokem640aes.rs  frodokem640shake.rs  frodokem976aes.rs  frodokem976shake.rs
pqcrypto-hqc/: Cargo.toml  build.rs
pqcrypto-hqc/src/: ffi.rs  hqcrmrs128.rs  hqcrmrs192.rs  hqcrmrs256.rs
pqcrypto-internals/: Cargo.toml  build.rs
pqcrypto-kyber/: Cargo.toml  build.rs
pqcrypto-kyber/src/: ffi.rs  kyber1024.rs  kyber102490s.rs  kyber512.rs  kyber51290s.rs  kyber768.rs  kyber76890s.rs
pqcrypto-ntru/: Cargo.toml  build.rs
pqcrypto-ntru/src/: ffi.rs  ntruhps2048509.rs  ntruhps2048677.rs  ntruhps4096821.rs  ntruhrss701.rs
pqcrypto-ntruprime/: Cargo.toml  build.rs
pqcrypto-ntruprime/src/: ffi.rs  ntrulpr1013.rs  ntrulpr1277.rs  ntrulpr653.rs  ntrulpr761.rs  ntrulpr857.rs  ntrulpr953.rs  sntrup1013.rs  sntrup1277.rs  sntrup653.rs  sntrup761.rs  sntrup857.rs  sntrup953.rs
pqcrypto-rainbow/: Cargo.toml  build.rs
pqcrypto-rainbow/src/: ffi.rs  rainbowicircumzenithal.rs  rainbowiclassic.rs  rainbowicompressed.rs  rainbowiiicircumzenithal.rs  rainbowiiiclassic.rs  rainbowiiicompressed.rs  rainbowvcircumzenithal.rs  rainbowvclassic.rs  rainbowvcompressed.rs
pqcrypto-saber/: Cargo.toml  build.rs
pqcrypto-saber/src/: ffi.rs  firesaber.rs  lightsaber.rs  saber.rs
pqcrypto-sphincsplus/: Cargo.toml  build.rs
pqcrypto-sphincsplus/src/: ffi.rs  sphincsharaka128frobust.rs  sphincsharaka128fsimple.rs  sphincsharaka128srobust.rs  sphincsharaka128ssimple.rs  sphincsharaka192frobust.rs  sphincsharaka192fsimple.rs  sphincsharaka192srobust.rs  sphincsharaka192ssimple.rs  sphincsharaka256frobust.rs  sphincsharaka256fsimple.rs  sphincsharaka256srobust.rs  sphincsharaka256ssimple.rs
pqcrypto-template/pqcrypto/: Cargo.toml.j2
pqcrypto-template/pqcrypto/examples/: keygen.rs  signer.rs  verifier.rs
pqcrypto-template/pqcrypto/src/: lib.rs.j2
pqcrypto-template/scheme/: Cargo.toml.j2  build.rs.j2
pqcrypto-template/scheme/src/: ffi.rs.j2  scheme.rs.j2
pqcrypto-traits/: Cargo.toml
pqcrypto/examples/: keygen.rs  signer.rs
pqcrypto/src/: lib.rs
