[package]
name = "pqcrypto-wasi"
description = "Post-Quantum cryptographic primitives with WASM/WASI support"
readme = "README.md"
version = "0.14.2"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustpq/"
repository = "https://github.com/rustpq/pqcrypto/"
keywords = ["cryptography", "post-quantum", "security"]
categories = ["cryptography"]

[dependencies]
pqcrypto-traits-wasi = { path = "../pqcrypto-traits", version = "0.3.4" }
pqcrypto-kyber-wasi = { path = "../pqcrypto-kyber", version = "0.7.3", optional = true }
pqcrypto-frodo-wasi = { path = "../pqcrypto-frodo", version = "0.4.9", optional = true }
pqcrypto-ntru-wasi = { path = "../pqcrypto-ntru", version = "0.5.6", optional = true }
pqcrypto-ntruprime-wasi = { path = "../pqcrypto-ntruprime", version = "0.1.4", optional = true }
pqcrypto-saber-wasi = { path = "../pqcrypto-saber", version = "0.1.9", optional = true }
pqcrypto-classicmceliece-wasi = { path = "../pqcrypto-classicmceliece", version = "0.1.5", optional = true }
pqcrypto-hqc-wasi = { path = "../pqcrypto-hqc", version = "0.1.3", optional = true }
pqcrypto-dilithium-wasi = { path = "../pqcrypto-dilithium", version = "0.4.3", optional = true }
pqcrypto-falcon-wasi = { path = "../pqcrypto-falcon", version = "0.2.9", optional = true }
pqcrypto-rainbow-wasi = { path = "../pqcrypto-rainbow", version = "0.2.3", optional = true }
pqcrypto-sphincsplus-wasi = { path = "../pqcrypto-sphincsplus", version = "0.6.2", optional = true }

[features]
default = ["pqcrypto-kyber-wasi","pqcrypto-frodo-wasi","pqcrypto-ntru-wasi","pqcrypto-ntruprime-wasi","pqcrypto-saber-wasi","pqcrypto-classicmceliece-wasi","pqcrypto-hqc-wasi","pqcrypto-dilithium-wasi","pqcrypto-falcon-wasi","pqcrypto-rainbow-wasi","pqcrypto-sphincsplus-wasi",]
cryptographically-insecure = []
serialization = ["pqcrypto-kyber-wasi/serialization","pqcrypto-frodo-wasi/serialization","pqcrypto-ntru-wasi/serialization","pqcrypto-ntruprime-wasi/serialization","pqcrypto-saber-wasi/serialization","pqcrypto-classicmceliece-wasi/serialization","pqcrypto-hqc-wasi/serialization","pqcrypto-dilithium-wasi/serialization","pqcrypto-falcon-wasi/serialization","pqcrypto-rainbow-wasi/serialization","pqcrypto-sphincsplus-wasi/serialization",]

[badges]
travis-ci = { repository = "rustpq/pqcrypto", branch = "master" }
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
all-features = true